# mailer

./: .coverage  .gitignore  TODO  config.json  mailer.py  models.py  pyproject.toml  readme.md  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
src/mailer/: crypto_helpers.py  factory.py  mailer.py  models.py
tests/: conftest.py  test_config.conf  test_config.py  test_crypto.py  test_factory.py  test_models.py  tests.py
