[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=mailer"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true 
warn_return_any = true 
warn_unreachable = true 
warn_unused_configs = true 
