[metadata]
name = mailer
author = Jon Rickman
license = MIT
license_file = LICENSE
platforms = osx
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3 :: 6
    Programming Language :: Python :: 3 :: 7
    Programming Language :: Python :: 3 :: 8
    Programming Language :: Python :: 3 :: 9

[options]
packages =
    mailer
install-requires = 
    pydantic
python_requires = >= 3.6
package_dir = 
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest
    pytest-cov
    flake8
    mypy
    tox

[options.package_data]
mailer = py.typed

[flake8]
max-line-length = 140